Re-add repo, with sections for Jessie and Stretch

--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
 <ul>
 <div id="debstablelist"></div>
 </ul>
+<li>Or set up a <a href="ppa.html">cloudprint PPA repository</a> link to integrate installation and updates with your package management system.</li>
 <li><a href="archive.html">Package Archive</a></li>
 </ul>
 <h3>Support/Feedback</h3>
