index.html: Add extra download link for Ubuntu
There are three choices now, sid (systemd and daemon>=2.0), Jessie
(systemd and daemon<2.0) and other (no systemd, and daemon<2.0).

--- a/index.html
+++ b/index.html
@@ -80,9 +80,14 @@
 <ul>
 <div id="deblist"></div>
 </ul>
-<li>Targeting Debian Stable/Jessie (doesn't require systemd, and python-daemon must be < 2.0)</li>
+<li>Targeting Debian Stable/Jessie (requires systemd, and python-daemon must be < 2.0)</li>
 <ul>
 <div id="debstablelist"></div>
+</ul>
+<li>For systems without systemd (Don't use the PPA)</li>
+<ul>
+<li><a href="deb/cloudprint-service_0.13-1+deb8u1+ppa2_all.deb">cloudprint-service_0.13-1+deb8u1+ppa2_all.deb</a></li>
+<li><a href="deb/cloudprint_0.13-1+deb8u1+ppa2_all.deb">cloudprint_0.13-1+deb8u1+ppa2_all.deb</a></li>
 </ul>
 <li>Or set up a <a href="ppa.html">cloudprint PPA repository</a> link to integrate installation and updates with your package management system.</li>
 <li><a href="archive.html">Package Archive</a></li>
