Update index.html for Stretch Stable release

--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
 <li><a href="deb/{{.}}">{{.}}</a></li>
 {{/latest_stable}}
 </script>
-<li>Targeting Debian Testing and Sid (requires systemd, and python-daemon >= 2.0)</li>
+<li>Targeting Debian Stretch/Stable and newer (requires systemd, and python-daemon >= 2.0)</li>
 <ul>
 <div id="deblist"></div>
 </ul>
-<li>Targeting Debian Stable/Jessie (requires systemd, and python-daemon must be < 2.0)</li>
+<li>Targeting Debian Oldstable/Jessie (requires systemd, and python-daemon must be < 2.0)</li>
 <ul>
 <div id="debstablelist"></div>
 </ul>
